--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -8,87 +8,82 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
--   [Research Questions - June 2023](#research-questions---june-2023)
--   [Chapter Introduction](#chapter-introduction)
--   [Short vignette illustrating shifts in scope of
-    activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
-    -   [Vignette 4.1 - An example of game making
-        activity](#vignette-4.1---an-example-of-game-making-activity)
-        -   [Table of Vignette](#table-of-vignette)
-    -   [Description of levels of activity illustrated using the
-        vignette](#description-of-levels-of-activity-illustrated-using-the-vignette)
-        -   [Environmental factors and
-            objectives](#environmental-factors-and-objectives)
-        -   [Larger objective - Making games for an
-            audience](#larger-objective---making-games-for-an-audience)
-        -   [Mid-level objective - Constructing a game feature by
-            feature](#mid-level-objective---constructing-a-game-feature-by-feature)
-        -   [Smaller objectives and actions - Implementing discrete code
-            and design
-            structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
--   [Summary of design evolution](#summary-of-design-evolution)
-    -   [P1: Exploratory stage: Oct 2017 - Dec
-        2018](#p1-exploratory-stage-oct-2017---dec-2018)
-    -   [P2: Accelerated game making programme (5 weeks): Jan - Feb
-        2019](#p2-accelerated-game-making-programme-5-weeks-jan---feb-2019)
-    -   [P3: Adding a process drama to the game making programme:
-        April - May
-        2019](#p3-adding-a-process-drama-to-the-game-making-programme-april---may-2019)
-    -   [P4: Adapting to MakeCode Arcade and more formal settings: Jan
-        2020 - September
-        2020](#p4-adapting-to-makecode-arcade-and-more-formal-settings-jan-2020---september-2020)
--   [Conflicts and design tensions experienced by participants and
-    facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
--   [1. Conflicts stemming from tensions between privileging participant
-    choices or underlying computing and systems
-    concepts](#conflicts-stemming-from-tensions-between-privileging-participant-choices-or-underlying-computing-and-systems-concepts)
-    -   [Learning Dimensions Map](#learning-dimensions-map)
-    -   [The potential of learning and navigational
-        maps](#the-potential-of-learning-and-navigational-maps)
--   [2. Conflicts due to identity clashes and dysfunctional group
-    work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
--   [3. Tensions due to lack of access and familiarity to game
-    programming
-    tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
-    -   [Design adaptations to facilitate novice use of a code
-        playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
-        -   [Addressing code syntax
-            errors](#addressing-code-syntax-errors)
-        -   [Distributed vs. self-contained approaches to asset
-            creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
-        -   [Shared community and remix
-            ability](#shared-community-and-remix-ability)
-    -   [Design choices of the starter game
-        template](#design-choices-of-the-starter-game-template)
-        -   [Variable editing for player
-            movement](#variable-editing-for-player-movement)
-        -   [Level design and
-            prototyping](#level-design-and-prototyping)
-        -   [Background colour and a pixel
-            art](#background-colour-and-a-pixel-art)
-        -   [Creating a simplified and clear project
-            structure](#creating-a-simplified-and-clear-project-structure)
-        -   [Observations on design behaviours encouraged through use of
-            game
-            template](#observations-on-design-behaviours-encouraged-through-use-of-game-template)
--   [4. Participant conflict associated with project navigation and use
-    of
-    documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
-    -   [Code snippet examples](#code-snippet-examples)
-    -   [Stand-alone tutorials](#stand-alone-tutorials)
-    -   [Organising tutorials into a linear structure, specifically in
-        the form of a
-        book](#organising-tutorials-into-a-linear-structure-specifically-in-the-form-of-a-book)
-    -   [Structuring and using a collection of game design
-        patterns](#structuring-and-using-a-collection-of-game-design-patterns)
--   [Chapter Discussion](#chapter-discussion)
-    -   [On the emergent and mutual nature of the design and research
-        process](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process)
-    -   [Discussion on authenticity and agency concerning tools and
-        resources](#discussion-on-authenticity-and-agency-concerning-tools-and-resources)
-    -   [Summary of barriers and tensions explored in this
-        chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
-    -   [Link to next chapter](#link-to-next-chapter)
+-   [Research Questions - Feb 2023](#research-questions---feb-2023)
+-   [Introduction](#introduction)
+    -   [Notes on structure of the
+        chapter](#notes-on-structure-of-the-chapter)
+-   [Re-examining barriers associated with cultural
+    factors](#re-examining-barriers-associated-with-cultural-factors)
+    -   [Barriers and tensions associated with authenticity of
+        audience - MOVE PERHAPS TO
+        PLAYTESTING](#barriers-and-tensions-associated-with-authenticity-of-audience---move-perhaps-to-playtesting)
+        -   [Learners may not find coding a project a motivating project
+            if it is only a private activity with no authentic
+            audience](#learners-may-not-find-coding-a-project-a-motivating-project-if-it-is-only-a-private-activity-with-no-authentic-audience)
+        -   [Restricted vs extended community - e.g. why not scratch
+            with online community? - MOVE TO DISCUSSION ON
+            PLAYTESTING?](#restricted-vs-extended-community---e.g.-why-not-scratch-with-online-community---move-to-discussion-on-playtesting)
+    -   [Note this has been moved from Design chapter so needs a place
+        to
+        sit.](#note-this-has-been-moved-from-design-chapter-so-needs-a-place-to-sit.)
+    -   [Using Physical Maps of Missions as Game Design
+        Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
+    -   [Barriers of identity hardcore coding & dysfunctional group
+        work - REALLY COMPRESS UNLESS DATA BECOMES PRESENT - USE AS
+        BASIS FOR
+        DISCUSSION?](#barriers-of-identity-hardcore-coding-dysfunctional-group-work---really-compress-unless-data-becomes-present---use-as-basis-for-discussion)
+        -   [Navigating the conflict](#navigating-the-conflict)
+-   [Exploring the impact of a drama
+    processes](#exploring-the-impact-of-a-drama-processes)
+    -   [Vignette 4.1.a - Introducing a drama
+        process](#vignette-4.1.a---introducing-a-drama-process)
+    -   [Description of Vignette 4.1.a](#description-of-vignette-4.1.a)
+    -   [Vignette 4.1.b - Session reflections and secret
+        missions](#vignette-4.1.b---session-reflections-and-secret-missions)
+    -   [Description of Vignette 4.1.b](#description-of-vignette-4.1.b)
+    -   [Reflecting in role](#reflecting-in-role)
+    -   [Observations on written interactions with the alien in the
+        drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
+        -   [Exploring documentation and accessing technical help within
+            the drama
+            frame](#exploring-documentation-and-accessing-technical-help-within-the-drama-frame)
+        -   [Playful dialogue with the aliens unrelated to game
+            making](#playful-dialogue-with-the-aliens-unrelated-to-game-making)
+    -   [Use of side missions to encourage varied creative
+        practices](#use-of-side-missions-to-encourage-varied-creative-practices)
+    -   [Concluding remarks on process
+        drama](#concluding-remarks-on-process-drama)
+-   [Emerging cultural practices](#emerging-cultural-practices)
+    -   [Playtesting](#playtesting)
+        -   [Playtesting as a cultural
+            process](#playtesting-as-a-cultural-process)
+        -   [Playtesting and embodied participation in the games of
+            others](#playtesting-and-embodied-participation-in-the-games-of-others)
+        -   [Community concepts and norming behaviour emerging during
+            playtesting](#community-concepts-and-norming-behaviour-emerging-during-playtesting)
+    -   [Emerging use of narratives and graphics which drawing on home
+        funds of
+        knowledge](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge)
+        -   [Summary: Home Funds and RQs](#summary-home-funds-and-rqs)
+    -   [Flexible design practices](#flexible-design-practices)
+        -   [Supporting Digital/Game
+            Jamming](#supporting-digitalgame-jamming)
+        -   [The potential of emergent "non-productive"
+            activities](#the-potential-of-emergent-non-productive-activities)
+-   [Discussion](#discussion)
+    -   [COMMENTS ON FORMAT OF Discussions /
+        Conclusion](#comments-on-format-of-discussions-conclusion)
+    -   [Nurturing agency by creating space for emergent
+        practices](#nurturing-agency-by-creating-space-for-emergent-practices)
+    -   [Discussion on dimensions of authenticity in in relation to
+        Agency](#discussion-on-dimensions-of-authenticity-in-in-relation-to-agency)
+        -   [Positive affective space within a drama
+            process](#positive-affective-space-within-a-drama-process)
+        -   [Extending the metaphor - anchoring in sheltered
+            harbours](#extending-the-metaphor---anchoring-in-sheltered-harbours)
+        -   [Implications in conceptualisations of forms of
+            agency](#implications-in-conceptualisations-of-forms-of-agency)
+-   [Conclusion](#conclusion)
 
 ## Research Questions - Feb 2023
 
