--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -9,11 +9,11 @@ layout: post
 categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
--   [Research Questions - June 2023](#research-questions---june-2023)
+-   [Research Questions - Feb 2023](#research-questions---feb-2023)
 -   [Notes to restructure](#notes-to-restructure)
     -   [Chapter outline](#chapter-outline)
-    -   [On GDP as a germ-cell and unit of
-        analysis](#on-gdp-as-a-germ-cell-and-unit-of-analysis)
+    -   [On GDP as a germ-cell and unit of analysis - and chapter
+        outline](#on-gdp-as-a-germ-cell-and-unit-of-analysis---and-chapter-outline)
 -   [Study of Vignette A](#study-of-vignette-a)
     -   [Descriptive Commentary on Vignette
         A](#descriptive-commentary-on-vignette-a)
@@ -79,8 +79,7 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
         catalogues - MERGE WITH THE SECTION
         ABOVE](#discussion-on-the-use-of-design-patterns-and-pattern-catalogues---merge-with-the-section-above)
 
-
-## Research Questions - Feb 2023
+## Research Questions - Feb 2024
 
 1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
 2. How can learners build agency in an evolving community of game makers?
@@ -119,7 +118,7 @@ And the coding structure here
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
 
 
-### On GDP as a germ-cell and unit of analysis
+### On GDP as a germ-cell and unit of analysis - and chapter outline
 
 In the introduction, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge. While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope. For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application.
 
@@ -366,7 +365,7 @@ In the programme Suzanna has built important proficiency in coding practice, whi
 
 While this pair structured the process of implementing new GDPs through careful use of documentation, alternate use of keyboard , adult facilitating and coding process responsive to the child's leat, other individuals and pairs approached the same objectives in diverse ways.
 
-This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns. 
+This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns.
 Later in the chapter this will be analysed for implications for researchers and d opportunities for educators.
 
 
