--- a/_posts/thesis_chapters/tocs/2023-12-6-Methods.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2023-12-6-Methods.md_toc.md
@@ -45,8 +45,8 @@
         drama](#concluding-remarks-on-process-drama)
 -   [Emerging cultural practices](#emerging-cultural-practices)
     -   [Playtesting](#playtesting)
-        -   [Playtesting as a social
-            process](#playtesting-as-a-social-process)
+        -   [Playtesting as a cultural
+            process](#playtesting-as-a-cultural-process)
         -   [Playtesting and embodied participation in the games of
             others](#playtesting-and-embodied-participation-in-the-games-of-others)
         -   [Community concepts and norming behaviour emerging during
