--- a/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
@@ -1,8 +1,8 @@
 -   [Research Questions - Feb 2023](#research-questions---feb-2023)
 -   [Notes to restructure](#notes-to-restructure)
     -   [Chapter outline](#chapter-outline)
-    -   [On GDP as a germ-cell and unit of
-        analysis](#on-gdp-as-a-germ-cell-and-unit-of-analysis)
+    -   [On GDP as a germ-cell and unit of analysis - and chapter
+        outline](#on-gdp-as-a-germ-cell-and-unit-of-analysis---and-chapter-outline)
 -   [Study of Vignette A](#study-of-vignette-a)
     -   [Descriptive Commentary on Vignette
         A](#descriptive-commentary-on-vignette-a)
